--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h1 class="mt-5 mb-3">ToDo作成</h1>
-  <%= form_with model: Todo.new, local: true do |f| %>
+  <%= form_with model: Todo.new, local: false do |f| %>
     <div class="row">
       <div class="col-10">
         <%= f.text_field :title, class: 'form-control' %>
